@@ -294,6 +294,11 @@ enddit()
 
 em(GENERAL SIGNAL PROCESSING ALGORITHMS)
 startdit()
+dit(-eS:stamp-id)
+Audio stamp. Takes a snapshot of passing audio data and stores
+it using id 'stamp-id' (integer number). This data can later be
+used by controllers and other operators.
+
 dit(-ea:amplify-%)
 Amplifies signal by amplify-% percent. 
  
@@ -572,6 +577,13 @@ Messages on the MIDI-channel 'channel' that are coming from
 controller number 'controller' are used as the controller
 source. The MIDI-device is specified in ./ecasoundrc (see 
 em(ecasoundrc(5))). Defaults to em(/dev/midi).
+
+dit(-ksv:fx-param,start-value,end-value,stamp-id,rms-toggle)
+Volume analyze controller. Analyzes the audio stored in 
+stamp 'stamp-id' (see '-eS:id' docs), and creates
+control data based on the results. If 'rms-toggle' is non-zero, 
+RMS-volume is used to calculate the control value. Otherwise
+average peak-amplitude is used.
 
 dit(-kx)
 This is a special switch that can be used when you need
